--- a/ProyectoFinal_TomasFlorio/src/app/components/banner/banner.component.html
+++ b/ProyectoFinal_TomasFlorio/src/app/components/banner/banner.component.html
@@ -1,3 +1,3 @@
 <div>
-    <img src="../../../assets/Foto Tomas Florio.png" alt="">
+    <img src="../../../assets/Screenshot_1.png" alt="">
 </div>
