--- a/ProyectoFinal_TomasFlorio/src/app/components/logo-ap/logo-ap.component.css
+++ b/ProyectoFinal_TomasFlorio/src/app/components/logo-ap/logo-ap.component.css
@@ -1,3 +1,18 @@
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.redes{
+    margin-right: 0.5em;
+}
 #logoAp{
     width: 150px;
+}
+img{
+    width: 50px;
+}
+.btn{
+    border-width: medium;
+    margin-right: 35px;
 }
