--- a/ProyectoFinal_TomasFlorio/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoFinal_TomasFlorio/src/app/components/logo-ap/logo-ap.component.html
@@ -1,1 +1,15 @@
-<img src="../../../assets/APLogo.png" id="logoAp">
+<div class="row">
+    <div class="container">
+        <div class="logo">
+            <img src="../../../assets/APLogo.png" id="logoAp">
+        </div>
+        <div class="redes">
+            <a href=""><img src="../../../assets/linkedin.png" alt="linkedin"></a>
+            <a href=""><img src="../../../assets/facebook.png" alt="facebook"></a>
+            <a href=""><img src="../../../assets/twitter.png" alt="twitter"></a>
+            <a href=""><img src="../../../assets/instagram.png" alt="instagram"></a>
+            <a href=""><img src="../../../assets/github.png" alt="github"></a>
+        </div>
+        <button type="button" class="btn btn-outline-light">Ingreso</button>
+    </div>
+</div>
