--- a/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Frontend/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Frontend/src/app/components/acerca-de/acerca-de.component.html
@@ -3,7 +3,7 @@
         <img src="../../../assets/Foto Tomas Florio.png" class="img-fluid" id="fotoperfil">
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <p id="nombre">Tomas Florio</p>
+        <p id="nombre">{{persona.nombre}}</p>
         <p>Full Stack Developer Jr</p>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
