--- a/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Frontend/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Frontend/src/app/components/logo-ap/logo-ap.component.html
@@ -10,6 +10,6 @@
             <a href=""><img src="../../../assets/instagram.png" alt="instagram"></a>
             <a href=""><img src="../../../assets/github.png" alt="github"></a>
         </div>
-        <button type="button" class="btn btn-outline-light">Ingreso</button>
+        <button type="button" class="btn btn-outline-light" (click)="login()">Ingreso</button>
     </div>
 </div>
