--- a/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Frontend/src/app/components/login/login.component.html
+++ b/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Frontend/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
                 </div>
 
                 <div class="form-outline form-white mb-4">
-                  <input type="password" id="password" class="form-control form-control-lg" [(ngModel)]="password" required />
+                  <input type="password" id="password" name="password" class="form-control form-control-lg" [(ngModel)]="password" required />
                   <label class="form-label" for="password">Contraseña</label>
                 </div>
 
