--- a/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Frontend/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Frontend/src/app/components/acerca-de/acerca-de.component.html
@@ -1,6 +1,9 @@
 <div class="row">
+        <button type="button" class="btn btn-primary" routerLink="/editacercade/1" *ngIf="isLogged">
+            Editar Persona
+        </button>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src="../../../assets/Foto Tomas Florio.png" class="img-fluid" id="fotoperfil">
+        <img src={{persona.img}} class="img-fluid" id="fotoperfil">
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
@@ -9,9 +12,7 @@
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
         <span>
             <h1>Acerca de mi</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, inventore molestias vitae dolore
-                facere expedita recusandae corporis repellat architecto sint sunt fuga dolor consequuntur explicabo ex
-                iste perspiciatis facilis! Doloremque?</p>
+            <p>{{persona.descripcion}}</p>
         </span>
     </div>
 </div>
