--- a/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Frontend/src/app/components/acerca-de/acerca-de.component.css
+++ b/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Frontend/src/app/components/acerca-de/acerca-de.component.css
@@ -7,11 +7,8 @@ div{
 }
 @media (min-width: 576px){
     #fotoperfil{
-        position:absolute;
-        width: 15%;
+        width: 200px;
         border-radius: 100%;
-        left: 5%;
-        top: 2950px;
        
     }
 }
