--- a/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Frontend/src/app/components/hys/hys.component.html
+++ b/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Frontend/src/app/components/hys/hys.component.html
@@ -1,19 +1,35 @@
 <div class="row">
-    <h1>Hard & Soft Skills</h1>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-    <circle-progress
-  [percent]="85"
-  [radius]="70"
-  [title]="'HTML'"
-  [showUnits]="false"
-  [titleColor]="'25px'"
-  [showSubtitle]="false"
-  [outerStrokeWidth]="6"
-  [innerStrokeWidth]="8"
-  [outerStrokeColor]="'#78C000'"
-  [innerStrokeColor]="'#C7E596'"
-  [animation]="true"
-  [animationDuration]="300"
-></circle-progress>
-</div>
+  <h1>Hard & Soft Skills</h1>
+  <div class="col-lg-2">
+    <button type="button" routerLink="/newskill" class="btn btn-dark" *ngIf="isLogged">Nueva Skill</button>
+  </div>
+  <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo" *ngFor="let skill of skill">
+    <circle-progress 
+    [percent]="(skill.porcentaje)" 
+    [radius]="70" [imageSrc]="''" 
+    [title]="(skill.nombre)"
+      [titleColor]="'#212F3C'" 
+      [showImage]="false"
+      [showTitle]="true" 
+      [imageHeight]="70" 
+      [imageWidth]="70" 
+      [showUnits]="false"
+      [showSubtitle]="false" 
+      [outerStrokeWidth]="16" 
+      [innerStrokeWidth]="2" 
+      [outerStrokeColor]="'#78C000'"
+      [innerStrokeColor]="'#C7E596'" 
+      [animation]="true" 
+      [animationDuration]="600">
+    </circle-progress>
+    <div>
+    <td *ngIf="isLogged">
+      <button class="btn btn-light" routerLink="/editskill/{{skill.id}}">
+        <i class="bi bi-pencil-fill"></i></button>
+    </td>
+    <td *ngIf="isLogged">
+      <button class="btn btn-danger" (click)="delete(skill.id)">
+        <i class="bi bi-trash3"></i></button>
+      </div>
+  </div>
 </div>
